# shieldtier-v2-browser

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  PLAN.md  setup_deps.ps1  setup_deps.sh
assets/: icon.icns
cmake/: FindCEF.cmake  ObfuscationPasses.cmake  VMProtect.cmake
design-references/: 01-mission-control-dashboard.tsx  02-network-har-capture-table.tsx  03-mitre-attack-heatmap.tsx  04-phishing-score-card.tsx  05-login-screen.tsx  README.md
docs/plans/: 2026-03-03-hypervisor-netsim-research.md  2026-03-03-subagent-architecture-design.md  2026-03-03-wave0-axiom-build-system.md  2026-03-03-wave1-chrono-cef-shell.md  2026-03-03-wave2a-core-analysis.md  2026-03-03-wave2b-remaining-engines.md  2026-03-03-wave3-phantom-terminal.md  2026-03-03-wave3-ui-design.md  2026-03-03-wave4-ipc-bridge-design.md  2026-03-04-wave4-ipc-bridge.md
packaging/: build_dmg.sh  build_msi.ps1
sandbox/: alpine-answers  analyze-exe.sh  install-alpine.expect  run-sandbox.sh  setup-vm.sh  setup-windows-vm.sh
sandbox/agent-overlay/: proc-monitor.sh  sandbox-agent.ps1  sandbox-agent.sh
sandbox/samples/: dropper-sim.c  mirai-behavior.sh
scripts/: bootstrap.sh  build.sh
server/: setup.sh
skills/Aegis/: SKILL.md
skills/Axiom/: SKILL.md
skills/Chrono/: SKILL.md
skills/Havoc/: SKILL.md
skills/Nexus/: SKILL.md
skills/Nimbus/: SKILL.md
skills/Obsidian/: SKILL.md
skills/Oracle/: SKILL.md
skills/Phantom/: SKILL.md
skills/Rune/: SKILL.md
skills/Scalpel/: SKILL.md
skills/Sentry/: SKILL.md
skills/Vault/: SKILL.md
skills/Verdict/: SKILL.md
src/native/: CMakeLists.txt  shieldtier.rc
src/native/analysis/advanced/: advanced_engine.cpp  advanced_engine.h  heap_analyzer.cpp  heap_analyzer.h  pe_capability.cpp  pe_capability.h  script_analyzer.cpp  script_analyzer.h  shellcode_detector.cpp  shellcode_detector.h
src/native/analysis/content/: content_analyzer.cpp  content_analyzer.h
src/native/analysis/email/: email_analyzer.cpp  email_analyzer.h
src/native/analysis/enrichment/: enrichment_manager.cpp  enrichment_manager.h  http_client.cpp  http_client.h
src/native/analysis/fileanalysis/: archive_analyzer.cpp  archive_analyzer.h  file_analyzer.cpp  file_analyzer.h  office_analyzer.cpp  office_analyzer.h  pdf_analyzer.cpp  pdf_analyzer.h  pe_analyzer.cpp  pe_analyzer.h
src/native/analysis/loganalysis/: evtx_parser.cpp  evtx_parser.h  log_analysis_engine.cpp  log_analysis_engine.h  log_detector.cpp  log_detector.h  log_manager.cpp  log_manager.h  log_normalizer.cpp  log_normalizer.h  shieldy_bridge.cpp  shieldy_bridge.h
src/native/analysis/sandbox/: behavior_signatures.cpp  behavior_signatures.h  cloud_sandbox.cpp  cloud_sandbox.h  network_profiler.cpp  network_profiler.h  sandbox_engine.cpp  sandbox_engine.h
src/native/analysis/threatfeed/: threat_feed_manager.cpp  threat_feed_manager.h
src/native/analysis/yara/: rule_manager.cpp  rule_manager.h  yara_engine.cpp  yara_engine.h
src/native/app/: app_mac.h  app_mac.mm  content_browser_client.cpp  content_browser_client.h  helper-Info.plist  main.cpp  process_helper_mac.cpp  shieldtier_app.cpp  shieldtier_app.h  shieldtier_client.cpp  shieldtier_client.h  shieldtier_renderer_app.cpp  shieldtier_renderer_app.h
src/native/auth/: auth_manager.cpp  auth_manager.h
src/native/browser/: download_handler.cpp  download_handler.h  navigation.cpp  navigation.h  request_handler.cpp  request_handler.h  response_filter.cpp  response_filter.h  scheme_handler.cpp  scheme_handler.h  session_manager.cpp  session_manager.h
src/native/capture/: capture_manager.cpp  capture_manager.h  har_builder.cpp  har_builder.h
src/native/chat/: chat_manager.cpp  chat_manager.h  chat_poller.cpp  chat_poller.h  chat_presence.cpp  chat_presence.h  shieldcrypt.cpp  shieldcrypt.h
src/native/cloud/: cloud_client.cpp  cloud_client.h  rule_sync.cpp  rule_sync.h
src/native/common/: json.h  result.h  types.h
src/native/config/: config_store.cpp  config_store.h  paths.h
src/native/export/: defang.cpp  defang.h  export_manager.cpp  export_manager.h
src/native/ipc/: event_bridge.cpp  event_bridge.h  ipc_protocol.h  message_handler.cpp  message_handler.h
src/native/network/: network_policy.cpp  network_policy.h
src/native/scoring/: scoring_engine.cpp  scoring_engine.h
src/native/security/: anti_debug.cpp  anti_debug.h  encrypted_pages.cpp  encrypted_pages.h  hardware_fingerprint.cpp  hardware_fingerprint.h  integrity_guard.cpp  integrity_guard.h  license_manager.cpp  license_manager.h  rule_crypto.cpp  rule_crypto.h
src/native/vm/: anti_evasion.cpp  anti_evasion.h  inetsim_server.cpp  inetsim_server.h  qemu_launcher.cpp  qemu_launcher.h  rdp_client.cpp  rdp_client.h  vm_installer.cpp  vm_installer.h  vm_manager.cpp  vm_manager.h  vm_protocol.cpp  vm_protocol.h  vm_scoring.cpp  vm_scoring.h  vm_types.h  windows_sandbox.cpp  windows_sandbox.h
src/native/vm/sandbox_agent/: agent.ps1
src/renderer/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/renderer/shim/: preload-shim.js
src/renderer/src/: App.tsx  animations.css  globals.css  index.html  main.tsx  types.ts
src/renderer/src/components/: AnalysisReportPanel.tsx  CaseNameModal.tsx  ChatContactList.tsx  ChatConversation.tsx  ChatMessageInput.tsx  ChatPanel.tsx  CommandPalette.tsx  EmailPanel.tsx  LogAnalysisPanel.tsx  LoginScreen.tsx  MITREMappingTab.tsx  MITREPanel.tsx  ProxyModal.tsx  ReportModal.tsx  SandboxResultView.tsx  Sidebar.tsx  ThreatFeedPanel.tsx  TopBar.tsx  VMSandboxPanel.tsx  VMSetupWizard.tsx  VerticalTabBar.tsx  Workspace.tsx  YARAPanel.tsx  analysis-helpers.ts
tests/: CMakeLists.txt  UAT-REPORT.md  test_config_store.cpp  test_content_analyzer.cpp  test_defang.cpp  test_file_analyzer.cpp  test_integrity_guard.cpp  test_log_normalizer.cpp  test_network_policy.cpp  test_sandbox_analysis.cpp  test_scoring_engine.cpp
tests/loganalysis/uat/: 03_defender_timeline.csv  04_c2_network.json  run_uat.cpp
tests/uat-data/: phishing-sample.eml  suspicious-dropper.ps1  suspicious-urls.txt  test-malicious.html  test-yara-rules.yar
(+103 files in other folders)
